@@ -60,7 +60,7 @@ public class ListTest {
         assertTrue(fruits.isEmpty());
         fruits.add(banana);
         assertFalse(fruits.isEmpty());
-        ProductCart banana = fruits.get(0);
+        ProductCart banana = fruits.getFirst();
         assertNotNull(banana);
         assertEquals(banana.name(), "banana");
     }
@@ -69,7 +69,7 @@ public class ListTest {
     public void shouldSetList() {
 
         fruits.add(banana);
-        fruits.add(0, orange);
+        fruits.addFirst(orange);
         assertEquals(2, fruits.size());
 
         assertEquals(fruits.get(0).name(), "orange");
@@ -124,8 +124,8 @@ public class ListTest {
             count++;
         }
         assertEquals(2, count);
-        fruits.remove(0);
-        fruits.remove(0);
+        fruits.removeFirst();
+        fruits.removeFirst();
         count = 0;
         for (ProductCart fruiCart: fruits) {
             count++;
